# tiingo-duckdb-framework

./: .aider.conf.yml  .aiderignore  .gitignore  CONVENTIONS.md  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  requirements.txt
.github/workflows/: dev__run-dagster.yaml  keep-active-repo.yml  pr__EtL_ci.yaml  prod__append-last-trading-day.yaml  prod__append-last-trading-day.yml  prod__run-dagster.yaml  prod__update-fundamentals-daily.yaml  prod__update-fundamentals.yaml  prod__update-statements.yaml  stage__append-last-trading-day.yaml  stage__append-last-trading-day.yml  stage__run-dagster.yaml  stage__update-fundamentals-daily.yaml  stage__update-fundamentals.yaml  stage__update-statements.yaml  update-fundamentals.yaml
.streamlit/: config.toml
EtL/: README.md  Taskfile.yaml  config.base.yaml  config.dev.yaml  config.prod.yaml  config.stage.yaml  go.mod  go.sum  main.go
EtL/cmd/: eod.go  eod_backfill.go  eod_daily.go  fundamentals.go  root.go
EtL/config/: config.foo.yaml  loader.go  loader_test.go
EtL/constants/: constants.go
EtL/extract/: fetch.go  fetch_test.go  unzip.go  unzip_test.go
EtL/load/: csv.go  csv_test.go  duckdb.go  duckdb_test.go
EtL/pipeline/: daily_end_of_day.go  end_of_day.go  end_of_day_test.go  fundamentals.go  fundamentals_test.go  pipelines.go  pipelines_test.go
EtL/sql/: insert__fundamentals_meta.sql  query__updated_fundamentals.sql  table__fundamentals_daily.sql  table__fundamentals_meta.sql  table__fundamentals_statements.sql  table__last_trading_day.sql  table__supported_tickers.sql  view__selected_fundamentals.sql  view__selected_last_trading_day.sql  view__selected_us_tickers.sql
EtL/sql/test/: mock_data__daily_adjusted.sql  mock_data__last_trading_day.sql
EtL/template/: sql_templater.go  sql_templater_test.go
EtL/utils/: paths.go  slices.go  slices_test.go  time.go
append-last-trading-day/: README.md  Taskfile.yaml  config.base.yaml  config.dev.yaml  config.prod.yaml  config.stage.yaml  config.yaml  go.mod  go.sum  main.go
append-last-trading-day/config/: loader.go
append-last-trading-day/extract/: duckdb.go  fetch.go  fetch_test.go
append-last-trading-day/load/: csv.go  duckdb.go  duckdb_test.go  ingest.go
append-last-trading-day/logger/: logger.go
append-last-trading-day/pipeline/: daily_end_of_day.go
append-last-trading-day/transform/: csv.go  selected_us_tickers.go
dashboard/: README.md  pyproject.toml  requirements.txt  taskfile.yaml
dashboard/src/: _router.py  dashboard.py
dashboard/src/dashboards/: main.py  predictions.py  stock_picker.py
dashboard/src/notebooks/: catboost_model_36m.py  eda.py
dashboard/src/utils/: duck.py  gdrive.py  notebooks.py
fundamentals/: README.md  pyproject.toml  taskfile.yaml  taskfile.yml
init-db/: README.md  Taskfile.yaml  init.ipynb  pyproject.toml
init-db/sql/: create_table.sql  selected_us_tickers.sql  supported_tickers.sql
init-db/src/: fetch.py  ingest.py  transform.py
init-db/tests/: test_fetch.py  test_ingest.py  test_transform.py
sql/: db__prod.sql  db__stage.sql  insert__fundamentals_meta.sql  insert__last_trading_day.sql  schema__fundamentals.sql  schemas.sql  table__daily_adjusted.sql  table__fundamental_meta.sql  table__fundamentals_meta.sql  table__last_trading_day.sql  table__supported_tickers.sql  view__selected_backfill.sql  view__selected_fundamentals.sql  view__selected_last_trading_day.sql
sql/transformations/: add_diffs.sql
transformations/: README.md  dagster_play.py  pyproject.toml  taskfile.yaml
transformations/dagster/: .gitignore  dagster.yaml
transformations/src/: catboost.py  catboost_trainer.py  dagster_catboost.py  dagster_play.py  utils.py
transformations/src/notebooks/: .gitignore
transformations/src/sql/: 1_wide_statements.sql  2_wide_with_daily_fundamentals.sql  3_wide_with_combined_metrics.sql  4_excess_returns.sql  excess_returns.sql  macros.sql  relevant_preds.sql  wide_statements.sql  with_index.sql
transformations/src/tests/: test_catboost_trainer.py
