[tool.poetry]
name = "fundamentals"
version = "0.1.0"
description = ""
authors = ["rasnes <rasmusnes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
duckdb = "^1.0.0"
pyarrow = "^16.1.0"
jupysql = "^0.10.10"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
duckdb-engine = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.4.2"
ruff = "^0.4.7"
pyright = "^1.1.365"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
