[tool.poetry]
name = "init-db"
version = "0.1.0"
description = ""
authors = ["rasnes <rasmusnes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
duckdb = "0.10.2"
httpx = "^0.27.0"
polars = "~0.20.25"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"
ipykernel = "^6.29.4"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
