[project]
name = "transformations"
version = "0.1.0"
description = "Data and ML pipeline transformations, orchstrated by Dagster"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "dagster-webserver>=1.8.7",
    "dagster>=1.8.7",
    "duckdb-engine>=0.13.2",
    "duckdb>=1.1.0",
    "pandas>=2.2.2",
    "polars>=1.7.1",
    "pyarrow>=17.0.0",
    "catboost>=1.2.7",
    "ipywidgets>=8.1.5",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.2",
    "shap>=0.46.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "ipykernel>=6.29.5",
    "pyright>=1.1.380",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.5",
]
