[project]
name = "transformations"
version = "0.1.0"
description = "Data and ML pipeline transformations, orchstrated by Dagster"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.7",
    "dagster>=1.9.6",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.14.0",
    "ipywidgets>=8.1.5",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "polars-lts-cpu>=1.18.0",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.0",
    "shap>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "dagster-webserver>=1.9.6",
    "ipykernel>=6.29.5",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
]
